[gd_scene load_steps=13 format=4 uid="uid://d07mfhyua6njf"]

[ext_resource type="PackedScene" uid="uid://cw783gm41lj6h" path="res://scenes/rooms/rooms.tscn" id="1_o6xl0"]
[ext_resource type="TileSet" uid="uid://biq1jatd3kcrs" path="res://resource/tileset/main.tres" id="1_tbgi4"]
[ext_resource type="Script" uid="uid://cvvn1gyvm7m82" path="res://scripts/main.gd" id="1_tipki"]
[ext_resource type="PackedScene" uid="uid://bm7te1dsx2ugr" path="res://scenes/character/player/player.tscn" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://ciy3uy0y7yyi6" path="res://assets/ui (new)/health_ui.png" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://ywo4btgsmj7l" path="res://assets/ui (new)/energy_ui.png" id="5_choun"]
[ext_resource type="Texture2D" uid="uid://b0lqlhxe6iwmn" path="res://assets/ui (new)/health_progress.png" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://dsxw6a6gwgxt" path="res://scenes/ui/skill_tree.tscn" id="6_85g3d"]
[ext_resource type="Script" uid="uid://dlv0j8frynp6l" path="res://scripts/ui/health_progress_bar.gd" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://dxpdbyke3j0xu" path="res://assets/ui (new)/energy_progress.png" id="6_ya4ey"]
[ext_resource type="Script" uid="uid://xd1u2mt42day" path="res://scripts/ui/energy_progress_bar.gd" id="7_eb6dy"]
[ext_resource type="Script" uid="uid://b6jeylhyou7h" path="res://scripts/ui/weapon_inventory.gd" id="7_tipki"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tipki")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthProgressBar" type="TextureProgressBar" parent="UI" node_paths=PackedStringArray("player")]
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 50.0
texture_over = ExtResource("4_jyhfs")
texture_progress = ExtResource("5_tbgi4")
texture_progress_offset = Vector2(19, 0)
script = ExtResource("6_tefeu")
player = NodePath("../../Player")

[node name="EnergyProgressBar" type="TextureProgressBar" parent="UI" node_paths=PackedStringArray("player")]
offset_left = 10.0
offset_top = 28.0
offset_right = 90.0
offset_bottom = 68.0
texture_over = ExtResource("5_choun")
texture_progress = ExtResource("6_ya4ey")
texture_progress_offset = Vector2(3, 3)
script = ExtResource("7_eb6dy")
player = NodePath("../../Player")

[node name="WeaponInventory" type="PanelContainer" parent="UI" node_paths=PackedStringArray("player")]
custom_minimum_size = Vector2(16, 16)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -32.0
offset_right = 8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_tipki")
player = NodePath("../../Player")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/WeaponInventory"]
layout_mode = 2

[node name="EndUI" type="MarginContainer" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -50.5
offset_right = -3.0
offset_bottom = 50.5
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndUI"]
layout_mode = 2

[node name="RestartGame" type="Button" parent="UI/EndUI/VBoxContainer"]
layout_mode = 2
text = "从头再来"

[node name="ReturnMainUI" type="Button" parent="UI/EndUI/VBoxContainer"]
layout_mode = 2
text = "返回主菜单"

[node name="ExitGame" type="Button" parent="UI/EndUI/VBoxContainer"]
layout_mode = 2
text = "退出游戏"

[node name="SkillTree" parent="UI" instance=ExtResource("6_85g3d")]
visible = false

[node name="LevelLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -27.0
offset_right = 54.0
offset_bottom = -4.0
grow_vertical = 0
text = "第 2 层"

[node name="Rooms" parent="." instance=ExtResource("1_o6xl0")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAQAAAADAAEAAAAFAAUAAAADAAEAAAAFAAYAAAADAAEAAAAFAAcAAAADAAEAAAAFAAgAAAADAAEAAAAFAAkAAAADAAEAAAAFAAoAAAADAAEAAAAFAAsAAAADAAEAAAAFAAwAAAADAAEAAAAFAA0AAAADAAEAAAAFAA4AAAADAAEAAAAFAA8AAAADAAEAAAAFABAAAAADAAEAAAAFABEAAAADAAEAAAAFABIAAAADAAEAAAAFABMAAAADAAEAAAAFABQAAAADAAEAAAAGAAQAAAADAAEAAAAGAAUAAAADAAEAAAAGAAYAAAADAAEAAAAGAAcAAAADAAEAAAAGAAgAAAADAAEAAAAGAAkAAAADAAEAAAAGAAoAAAADAAEAAAAGAAsAAAADAAEAAAAGAAwAAAADAAEAAAAGAA0AAAADAAEAAAAGAA4AAAADAAEAAAAGAA8AAAADAAEAAAAGABAAAAADAAEAAAAGABEAAAADAAEAAAAGABIAAAADAAEAAAAGABMAAAADAAEAAAAGABQAAAADAAEAAAAHAAQAAAADAAEAAAAHAAUAAAADAAEAAAAHAAYAAAADAAEAAAAHAAcAAAADAAEAAAAHAAgAAAADAAEAAAAHAAkAAAADAAEAAAAHAAoAAAADAAEAAAAHAAsAAAADAAEAAAAHAAwAAAADAAEAAAAHAA0AAAADAAEAAAAHAA4AAAADAAEAAAAHAA8AAAADAAEAAAAHABAAAAADAAEAAAAHABEAAAADAAEAAAAHABIAAAADAAEAAAAHABMAAAADAAEAAAAHABQAAAADAAEAAAAIAAQAAAADAAEAAAAIAAUAAAADAAEAAAAIAAYAAAADAAEAAAAIAAcAAAADAAEAAAAIAAgAAAADAAEAAAAIAAkAAAADAAEAAAAIAAoAAAADAAEAAAAIAAsAAAADAAEAAAAIAAwAAAADAAEAAAAIAA0AAAADAAEAAAAIAA4AAAADAAEAAAAIAA8AAAADAAEAAAAIABAAAAADAAEAAAAIABEAAAADAAEAAAAIABIAAAADAAEAAAAIABMAAAADAAEAAAAIABQAAAADAAEAAAAJAAQAAAADAAEAAAAJAAUAAAADAAEAAAAJAAYAAAADAAEAAAAJAAcAAAADAAEAAAAJAAgAAAADAAEAAAAJAAkAAAADAAEAAAAJAAoAAAADAAEAAAAJAAsAAAADAAEAAAAJAAwAAAADAAEAAAAJAA0AAAADAAEAAAAJAA4AAAADAAEAAAAJAA8AAAADAAEAAAAJABAAAAADAAEAAAAJABEAAAADAAEAAAAJABIAAAADAAEAAAAJABMAAAADAAEAAAAJABQAAAADAAEAAAAKAAQAAAADAAEAAAAKAAUAAAADAAEAAAAKAAYAAAADAAEAAAAKAAcAAAADAAEAAAAKAAgAAAADAAEAAAAKAAkAAAADAAEAAAAKAAoAAAADAAEAAAAKAAsAAAADAAEAAAAKAAwAAAADAAEAAAAKAA0AAAADAAEAAAAKAA4AAAADAAEAAAAKAA8AAAADAAEAAAAKABAAAAADAAEAAAAKABEAAAADAAEAAAAKABIAAAADAAEAAAAKABMAAAADAAEAAAAKABQAAAADAAEAAAALAAQAAAADAAEAAAALAAUAAAADAAEAAAALAAYAAAADAAEAAAALAAcAAAADAAEAAAALAAgAAAADAAEAAAALAAkAAAADAAEAAAALAAoAAAADAAEAAAALAAsAAAADAAEAAAALAAwAAAADAAEAAAALAA0AAAADAAEAAAALAA4AAAADAAEAAAALAA8AAAADAAEAAAALABAAAAADAAEAAAALABEAAAADAAEAAAALABIAAAADAAEAAAALABMAAAADAAEAAAALABQAAAADAAEAAAAMAAQAAAADAAEAAAAMAAUAAAADAAEAAAAMAAYAAAADAAEAAAAMAAcAAAADAAEAAAAMAAgAAAADAAEAAAAMAAkAAAADAAEAAAAMAAoAAAADAAEAAAAMAAsAAAADAAEAAAAMAAwAAAADAAEAAAAMAA0AAAADAAEAAAAMAA4AAAADAAEAAAAMAA8AAAADAAEAAAAMABAAAAADAAEAAAAMABEAAAADAAEAAAAMABIAAAADAAEAAAAMABMAAAADAAEAAAAMABQAAAADAAEAAAANAAQAAAADAAEAAAANAAUAAAADAAEAAAANAAYAAAADAAEAAAANAAcAAAADAAEAAAANAAgAAAADAAEAAAANAAkAAAADAAEAAAANAAoAAAADAAEAAAANAAsAAAADAAEAAAANAAwAAAADAAEAAAANAA0AAAADAAEAAAANAA4AAAADAAEAAAANAA8AAAADAAEAAAANABAAAAADAAEAAAANABEAAAADAAEAAAANABIAAAADAAEAAAANABMAAAADAAEAAAANABQAAAADAAEAAAAOAAQAAAADAAEAAAAOAAUAAAADAAEAAAAOAAYAAAADAAEAAAAOAAcAAAADAAEAAAAOAAgAAAADAAEAAAAOAAkAAAADAAEAAAAOAAoAAAADAAEAAAAOAAsAAAADAAEAAAAOAAwAAAADAAEAAAAOAA0AAAADAAEAAAAOAA4AAAADAAEAAAAOAA8AAAADAAEAAAAOABAAAAADAAEAAAAOABEAAAADAAEAAAAOABIAAAADAAEAAAAOABMAAAADAAEAAAAOABQAAAADAAEAAAAPAAQAAAADAAEAAAAPAAUAAAADAAEAAAAPAAYAAAADAAEAAAAPAAcAAAADAAEAAAAPAAgAAAADAAEAAAAPAAkAAAADAAEAAAAPAAoAAAADAAEAAAAPAAsAAAADAAEAAAAPAAwAAAADAAEAAAAPAA0AAAADAAEAAAAPAA4AAAADAAEAAAAPAA8AAAADAAEAAAAPABAAAAADAAEAAAAPABEAAAADAAEAAAAPABIAAAADAAEAAAAPABMAAAADAAEAAAAPABQAAAADAAEAAAAQAAQAAAADAAEAAAAQAAUAAAADAAEAAAAQAAYAAAADAAEAAAAQAAcAAAADAAEAAAAQAAgAAAADAAEAAAAQAAkAAAADAAEAAAAQAAoAAAADAAEAAAAQAAsAAAADAAEAAAAQAAwAAAADAAEAAAAQAA0AAAADAAEAAAAQAA4AAAADAAEAAAAQAA8AAAADAAEAAAAQABAAAAADAAEAAAAQABEAAAADAAEAAAAQABIAAAADAAEAAAAQABMAAAADAAEAAAAQABQAAAADAAEAAAARAAQAAAADAAEAAAARAAUAAAADAAEAAAARAAYAAAADAAEAAAARAAcAAAADAAEAAAARAAgAAAADAAEAAAARAAkAAAADAAEAAAARAAoAAAADAAEAAAARAAsAAAADAAEAAAARAAwAAAADAAEAAAARAA0AAAADAAEAAAARAA4AAAADAAEAAAARAA8AAAADAAEAAAARABAAAAADAAEAAAARABEAAAADAAEAAAARABIAAAADAAEAAAARABMAAAADAAEAAAARABQAAAADAAEAAAASAAQAAAADAAEAAAASAAUAAAADAAEAAAASAAYAAAADAAEAAAASAAcAAAADAAEAAAASAAgAAAADAAEAAAASAAkAAAADAAEAAAASAAoAAAADAAEAAAASAAsAAAADAAEAAAASAAwAAAADAAEAAAASAA0AAAADAAEAAAASAA4AAAADAAEAAAASAA8AAAADAAEAAAASABAAAAADAAEAAAASABEAAAADAAEAAAASABIAAAADAAEAAAASABMAAAADAAEAAAASABQAAAADAAEAAAATAAQAAAADAAEAAAATAAUAAAADAAEAAAATAAYAAAADAAEAAAATAAcAAAADAAEAAAATAAgAAAADAAEAAAATAAkAAAADAAEAAAATAAoAAAADAAEAAAATAAsAAAADAAEAAAATAAwAAAADAAEAAAATAA0AAAADAAEAAAATAA4AAAADAAEAAAATAA8AAAADAAEAAAATABAAAAADAAEAAAATABEAAAADAAEAAAATABIAAAADAAEAAAATABMAAAADAAEAAAATABQAAAADAAEAAAAUAAQAAAADAAEAAAAUAAUAAAADAAEAAAAUAAYAAAADAAEAAAAUAAcAAAADAAEAAAAUAAgAAAADAAEAAAAUAAkAAAADAAEAAAAUAAoAAAADAAEAAAAUAAsAAAADAAEAAAAUAAwAAAADAAEAAAAUAA0AAAADAAEAAAAUAA4AAAADAAEAAAAUAA8AAAADAAEAAAAUABAAAAADAAEAAAAUABEAAAADAAEAAAAUABIAAAADAAEAAAAUABMAAAADAAEAAAAUABQAAAADAAEAAAAVAAQAAAADAAEAAAAVAAUAAAADAAEAAAAVAAYAAAADAAEAAAAVAAcAAAADAAEAAAAVAAgAAAADAAEAAAAVAAkAAAADAAEAAAAVAAoAAAADAAEAAAAVAAsAAAADAAEAAAAVAAwAAAADAAEAAAAVAA0AAAADAAEAAAAVAA4AAAADAAEAAAAVAA8AAAADAAEAAAAVABAAAAADAAEAAAAVABEAAAADAAEAAAAVABIAAAADAAEAAAAVABMAAAADAAEAAAAVABQAAAADAAEAAAAWAAQAAAADAAEAAAAWAAUAAAADAAEAAAAWAAYAAAADAAEAAAAWAAcAAAADAAEAAAAWAAgAAAADAAEAAAAWAAkAAAADAAEAAAAWAAoAAAADAAEAAAAWAAsAAAADAAEAAAAWAAwAAAADAAEAAAAWAA0AAAADAAEAAAAWAA4AAAADAAEAAAAWAA8AAAADAAEAAAAWABAAAAADAAEAAAAWABEAAAADAAEAAAAWABIAAAADAAEAAAAWABMAAAADAAEAAAAWABQAAAADAAEAAAAXAAQAAAADAAEAAAAXAAUAAAADAAEAAAAXAAYAAAADAAEAAAAXAAcAAAADAAEAAAAXAAgAAAADAAEAAAAXAAkAAAADAAEAAAAXAAoAAAADAAEAAAAXAAsAAAADAAEAAAAXAAwAAAADAAEAAAAXAA0AAAADAAEAAAAXAA4AAAADAAEAAAAXAA8AAAADAAEAAAAXABAAAAADAAEAAAAXABEAAAADAAEAAAAXABIAAAADAAEAAAAXABMAAAADAAEAAAAXABQAAAADAAEAAAAYAAQAAAADAAEAAAAYAAUAAAADAAEAAAAYAAYAAAADAAEAAAAYAAcAAAADAAEAAAAYAAgAAAADAAEAAAAYAAkAAAADAAEAAAAYAAoAAAADAAEAAAAYAAsAAAADAAEAAAAYAAwAAAADAAEAAAAYAA0AAAADAAEAAAAYAA4AAAADAAEAAAAYAA8AAAADAAEAAAAYABAAAAADAAEAAAAYABEAAAADAAEAAAAYABIAAAADAAEAAAAYABMAAAADAAEAAAAYABQAAAADAAEAAAAFABUAAAAHAAQAAAAGABUAAAAHAAQAAAAHABUAAAAHAAQAAAAIABUAAAAHAAQAAAAJABUAAAAHAAQAAAAKABUAAAAHAAQAAAALABUAAAAHAAQAAAAMABUAAAAHAAQAAAANABUAAAAHAAQAAAAOABUAAAAHAAQAAAAPABUAAAAHAAQAAAAQABUAAAAHAAQAAAARABUAAAAHAAQAAAASABUAAAAHAAQAAAATABUAAAAHAAQAAAAUABUAAAAHAAQAAAAVABUAAAAHAAQAAAAWABUAAAAHAAQAAAAXABUAAAAHAAQAAAAYABUAAAAHAAQAAAAZABUAAAAHAAQAAAAZABQAAAAHAAQAAAAZABMAAAAHAAQAAAAZABIAAAAHAAQAAAAZABEAAAAHAAQAAAAZABAAAAAHAAQAAAAZAA8AAAAHAAQAAAAZAA4AAAAHAAQAAAAZAA0AAAAHAAQAAAAZAAwAAAAHAAQAAAAZAAsAAAAHAAQAAAAZAAoAAAAHAAQAAAAZAAkAAAAHAAQAAAAZAAgAAAAHAAQAAAAZAAcAAAAHAAQAAAAZAAYAAAAHAAQAAAAZAAUAAAAHAAQAAAAZAAQAAAAHAAQAAAAZAAMAAAAHAAQAAAAYAAMAAAAHAAQAAAAXAAMAAAAHAAQAAAAWAAMAAAAHAAQAAAAVAAMAAAAHAAQAAAAUAAMAAAAHAAQAAAATAAMAAAAHAAQAAAASAAMAAAAHAAQAAAARAAMAAAAHAAQAAAAQAAMAAAAHAAQAAAAPAAMAAAAHAAQAAAAOAAMAAAAHAAQAAAANAAMAAAAHAAQAAAAMAAMAAAAHAAQAAAALAAMAAAAHAAQAAAAKAAMAAAAHAAQAAAAJAAMAAAAHAAQAAAAIAAMAAAAHAAQAAAAHAAMAAAAHAAQAAAAGAAMAAAAHAAQAAAAFAAMAAAAHAAQAAAAEAAMAAAAHAAQAAAAEAAQAAAAHAAQAAAAEAAUAAAAHAAQAAAAEAAYAAAAHAAQAAAAEAAcAAAAHAAQAAAAEAAgAAAAHAAQAAAAEAAkAAAAHAAQAAAAEAAoAAAAHAAQAAAAEAAsAAAAHAAQAAAAEAAwAAAAHAAQAAAAEAA0AAAAHAAQAAAAEAA4AAAAHAAQAAAAEAA8AAAAHAAQAAAAEABAAAAAHAAQAAAAEABEAAAAHAAQAAAAEABIAAAAHAAQAAAAEABMAAAAHAAQAAAAEABQAAAAHAAQAAAAEABUAAAAHAAQAAAA=")
enabled = false
tile_set = ExtResource("1_tbgi4")

[node name="Player" parent="." instance=ExtResource("2_0wfyh")]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="pressed" from="UI/EndUI/VBoxContainer/RestartGame" to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="UI/EndUI/VBoxContainer/ReturnMainUI" to="." method="_on_return_main_ui_pressed"]
[connection signal="pressed" from="UI/EndUI/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
